variables project finished

--- a/1. Basics/1.2 Variables and Data types/in_class_demo.ipynb
+++ b/1. Basics/1.2 Variables and Data types/in_class_demo.ipynb
@@ -62,10 +62,10 @@
     "var2 = var\n",
     "message = \"hello\"\n",
     "\n",
-    "print(f\"The memory address of the value 10: {id(10)}\")\n",
-    "print(f\"Memory location of the variable 'var' as an integer {id(var)}\")\n",
-    "print(f\"Memory location of the variable 'var2' as an integer  {id(var2)}\")\n",
-    "print(f\"Memory location of the variable 'message' as an integer  {id(message)}\")\n"
+    "#TODO Print the memory address of the value 10\n",
+    "#TODO Print the memory address of var\n",
+    "#TODO Print the memory address of var2\n",
+    "#TODO Print the memory address of message\n"
    ]
   },
   {
@@ -187,6 +187,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The `type()` funtion\n",
+    "This method is useful for inspecting the type of an object. A type is simply a description of the category of data being worked with.\n",
+    "\n",
+    "**Check the data type of an object by putting the object/variable indide of the `type` functions arguments**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -286,9 +296,9 @@
     "\n",
     "# remember, sequences start at index 0, so the last index is -> (the length of the sequence - 1)\n",
     "#TODO: assign the numerical location of the last character in `seq` to index using the len() function\n",
-    "print(f\"Length of the sequence: {len(seq)}\")\n",
-    "print(f\"Last index value of the sequence: {index}\")\n",
-    "print(f\"Value at the end of the sequence: {seq[index]}\")\n"
+    "#TODO Print the length of the sequence\n",
+    "#TODO Print the value of index (which is the last position in the sequence)\n",
+    "#TODO use the index variable to print the last character in the sequence\n"
    ]
   },
   {
