--- a/1. Basics/Projects/1. Basics/1. printing_variables.ipynb
+++ b/1. Basics/Projects/1. Basics/1. printing_variables.ipynb
@@ -34,9 +34,9 @@
     "    (True, \"Minecraft is the best\", 10.098, 'one billion', {1,2,3,4}),\n",
     "    \"return me\",\n",
     "    5 == 5,\n",
-    "    [x**2 for x in data[4]],\n",
+    "    [x**2 for x in [1, 2, 3, 4, 5]],\n",
     "    654.548    \n",
-    "]"
+    "]\n"
    ]
   },
   {
