--- a/2. Flow Control/Projects/3. updated_bank_proj.ipynb
+++ b/2. Flow Control/Projects/3. updated_bank_proj.ipynb
@@ -1,23 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "language_info": {
-      "name": "python"
-    },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "3. updated_bank_proj.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Gabe-flomo/computer-magic-101/blob/master/2.%20Flow%20Control/Projects/3.%20updated_bank_proj.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -35,10 +22,10 @@
         "\n",
         "**For example: I could deposit $100, withdraw $27, then deposit another $100**\n",
         "\n",
-        "- Let the users choose which option to do (withdraw or deposit)\n",
-        "- keep updating the total bank balance after each operation\n",
-        "- create a list (or two) that will keep track of each operation the user does\n",
-        "- break the loop if the user types `logout`\n",
+        "- Let the users choose which transaction they want to do (withdraw or deposit)\n",
+        "- keep updating the total bank balance after each transaction\n",
+        "- create a list (or two) that will keep track of each transaction the user makes\n",
+        "- break the loop if the user enters `logout` as a transaction\n",
         "- when the user logs out, print that the user has logged out along with the current bank balance and how many deposits and withdraws they made\n",
         "\n",
         "### Example output\n",
@@ -50,14 +37,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "TBniS9jx7nO-"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "name": "3. updated_bank_proj.ipynb",
+      "provenance": []
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "orig_nbformat": 4
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
