--- a/Review/four vs everything.ipynb
+++ b/Review/four vs everything.ipynb
@@ -2,15 +2,32 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
-    "orig_nbformat": 4,
     "colab": {
       "name": "four vs everything.ipynb",
       "provenance": [],
       "include_colab_link": true
-    }
+    },
+    "interpreter": {
+      "hash": "fd61235da8d855c081cbd5d7c6398e4c179a40a950675235256f7f30499f1124"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.7.4 64-bit ('base': conda)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.4"
+    },
+    "orig_nbformat": 4
   },
   "cells": [
     {
@@ -30,13 +47,15 @@
       },
       "source": [
         "# Instructions\n",
-        "Generate a list of 24 random numbers. For each number in the list, check to see if it is divisible by 4. If the number is divisible by four, remove the number from the list and add it to a new list called `fours`. After you've looped through the list and have created a list of numbers divisible by four, find the sum of both lists and compare which one is bigger.\n",
+        "Generate a list of 24 random numbers. For each number in the list, check to see if it is divisible by 4. If the number is divisible by four, add it to a new list called `fours`, if it is not divisible by four add it to a list called `everything`. Once the loop is complete, find the sum of both lists and compare which list is bigger.\n",
         "\n",
         "### Example output\n",
         "`original = [2,4,6,8,10,12,14,16]`<br>\n",
         "`fours = [4,8,12,16]`<br>\n",
-        "`original_sum = 72`<br>\n",
-        "`fours = 40`"
+        "`everything = [2, 6, 10, 14]`<br>\n",
+        "`everything_sum = 32`<br>\n",
+        "`fours_sum = 40` <br>\n",
+        "`The sum of everything is less than fours`"
       ]
     },
     {
@@ -45,7 +64,8 @@
         "id": "ZFDPsQ3hZROM"
       },
       "source": [
-        "#TODO Code goes here"
+        "#TODO Code goes here\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
