--- a/Review/hills and valleys.ipynb
+++ b/Review/hills and valleys.ipynb
@@ -41,11 +41,64 @@
     "\n",
     "#TODO count the hills and valleys"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[2, 3, 4]\n",
+      "2\n",
+      "[3, 4]\n",
+      "3\n",
+      "[4]\n",
+      "4\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1,2,3,4]\n",
+    "for i in x.copy():\n",
+    "    index = x.index(i)\n",
+    "    val = x.pop(index)\n",
+    "    print(val)\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "fd61235da8d855c081cbd5d7c6398e4c179a40a950675235256f7f30499f1124"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   },
   "orig_nbformat": 4
  },
